syntax = "proto3";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message EmptyRequest {

}

message EmptyResponse {

}

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc SayNothing (EmptyRequest) returns (EmptyResponse);
}
